Completed SMS backend modules and fixed build issues