@@ -7,37 +7,43 @@ import com.sms.entity.Student;
 import com.sms.repository.AttendanceRepository;
 import com.sms.repository.CourseRepository;
 import com.sms.repository.StudentRepository;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.server.ResponseStatusException;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @Transactional
 public class AttendanceService {
 
-    @Autowired
-    private AttendanceRepository attendanceRepository;
+    private final AttendanceRepository attendanceRepository;
+    private final StudentRepository studentRepository;
+    private final CourseRepository courseRepository;
 
-    @Autowired
-    private StudentRepository studentRepository;
+    public AttendanceService(
+            AttendanceRepository attendanceRepository,
+            StudentRepository studentRepository,
+            CourseRepository courseRepository) {
 
-    @Autowired
-    private CourseRepository courseRepository;
+        this.attendanceRepository = attendanceRepository;
+        this.studentRepository = studentRepository;
+        this.courseRepository = courseRepository;
+    }
 
-    public AttendanceDTO createAttendance(AttendanceDTO dto) {
+    public AttendanceDTO createAttendance(
+            AttendanceDTO dto) {
 
-        Student student = studentRepository.findById(dto.getStudentId())
+        Student student = studentRepository.findById(
+                dto.getStudentId())
                 .orElseThrow(() ->
                         new ResponseStatusException(
                                 HttpStatus.NOT_FOUND,
                                 "Student not found"));
 
-        Course course = courseRepository.findById(dto.getCourseId())
+        Course course = courseRepository.findById(
+                dto.getCourseId())
                 .orElseThrow(() ->
                         new ResponseStatusException(
                                 HttpStatus.NOT_FOUND,
@@ -47,51 +53,81 @@ public class AttendanceService {
                 .student(student)
                 .course(course)
                 .attendanceDate(dto.getAttendanceDate())
-                .status(Attendance.AttendanceStatus.valueOf(dto.getStatus()))
+                .status(
+                        Attendance.AttendanceStatus.valueOf(
+                                dto.getStatus()))
                 .remarks(dto.getRemarks())
                 .build();
 
         return mapToDTO(
-                attendanceRepository.save(attendance)
-        );
+                attendanceRepository.save(attendance));
     }
 
+    @Transactional(readOnly = true)
     public List<AttendanceDTO> getAllAttendance() {
 
         return attendanceRepository.findAll()
                 .stream()
                 .map(this::mapToDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    public AttendanceDTO getAttendanceById(Long id) {
+    @Transactional(readOnly = true)
+    public AttendanceDTO getAttendanceById(
+            Long id) {
 
-        Attendance attendance = attendanceRepository.findById(id)
-                .orElseThrow(() ->
-                        new ResponseStatusException(
-                                HttpStatus.NOT_FOUND,
-                                "Attendance not found"));
+        Attendance attendance =
+                attendanceRepository.findById(id)
+                        .orElseThrow(() ->
+                                new ResponseStatusException(
+                                        HttpStatus.NOT_FOUND,
+                                        "Attendance not found"));
 
         return mapToDTO(attendance);
+    }
+
+    @Transactional(readOnly = true)
+    public List<AttendanceDTO> getAttendanceByStudent(
+            Long studentId) {
+
+        return attendanceRepository
+                .findByStudentId(studentId)
+                .stream()
+                .map(this::mapToDTO)
+                .toList();
+    }
+
+    @Transactional(readOnly = true)
+    public List<AttendanceDTO> getAttendanceByCourse(
+            Long courseId) {
+
+        return attendanceRepository
+                .findByCourseId(courseId)
+                .stream()
+                .map(this::mapToDTO)
+                .toList();
     }
 
     public AttendanceDTO updateAttendance(
             Long id,
             AttendanceDTO dto) {
 
-        Attendance attendance = attendanceRepository.findById(id)
-                .orElseThrow(() ->
-                        new ResponseStatusException(
-                                HttpStatus.NOT_FOUND,
-                                "Attendance not found"));
+        Attendance attendance =
+                attendanceRepository.findById(id)
+                        .orElseThrow(() ->
+                                new ResponseStatusException(
+                                        HttpStatus.NOT_FOUND,
+                                        "Attendance not found"));
 
-        attendance.setAttendanceDate(dto.getAttendanceDate());
+        attendance.setAttendanceDate(
+                dto.getAttendanceDate());
+
         attendance.setStatus(
                 Attendance.AttendanceStatus.valueOf(
-                        dto.getStatus()
-                )
-        );
-        attendance.setRemarks(dto.getRemarks());
+                        dto.getStatus()));
+
+        attendance.setRemarks(
+                dto.getRemarks());
 
         Attendance updatedAttendance =
                 attendanceRepository.save(attendance);
@@ -99,7 +135,8 @@ public class AttendanceService {
         return mapToDTO(updatedAttendance);
     }
 
-    public void deleteAttendance(Long id) {
+    public void deleteAttendance(
+            Long id) {
 
         Attendance attendance =
                 attendanceRepository.findById(id)
@@ -114,18 +151,20 @@ public class AttendanceService {
     private AttendanceDTO mapToDTO(
             Attendance attendance) {
 
+        String studentName =
+                attendance.getStudent()
+                        .getUser()
+                        .getFirstName()
+                        + " "
+                        + attendance.getStudent()
+                        .getUser()
+                        .getLastName();
+
         return AttendanceDTO.builder()
                 .id(attendance.getId())
                 .studentId(
                         attendance.getStudent().getId())
-                .studentName(
-                        attendance.getStudent()
-                                .getUser()
-                                .getFirstName()
-                                + " "
-                                + attendance.getStudent()
-                                .getUser()
-                                .getLastName())
+                .studentName(studentName)
                 .courseId(
                         attendance.getCourse().getId())
                 .courseName(
